Viva post corrections, prelim, chp 1, 3, 4 & 8 done

--- a/bibliography/LHC-ATLAS.bib
+++ b/bibliography/LHC-ATLAS.bib
@@ -2,6 +2,18 @@
 % Taken from https://twiki.cern.ch/twiki/bin/view/AtlasProtected/PubComUsefulBibTex
 % Additional reference from PMG group
 
+% event generator
+@inproceedings{Boos:2001cv,
+    author = "Boos, E. and others",
+    title = "{Generic User Process Interface for Event Generators}",
+    booktitle = "{2nd Les Houches Workshop on Physics at TeV Colliders}",
+    eprint = "hep-ph/0109068",
+    archivePrefix = "arXiv",
+    reportNumber = "FERMILAB-CONF-01-496-T",
+    month = "9",
+    year = "2001"
+}
+
 
 % LHC
 @Article{Evans:2008zzb,
