Correcting small typos throughout

--- a/bibliography/LHC-ATLAS.bib
+++ b/bibliography/LHC-ATLAS.bib
@@ -498,7 +498,7 @@ author={Calafiura, Paolo}}
 
 
 
-@techreport{Caillou:2815578,
+@misc{Caillou:28155782,
       author        = "Caillou, Sylvain and Calafiura, Paolo and Farrell, Steven
                        Andrew and Ju, Xiangyang and Murnane, Daniel Thomas and
                        Rougier, Charline and Stark, Jan and Vallier, Alexis",
