--- a/main.tex
+++ b/main.tex
@@ -246,6 +246,7 @@ A thesis submitted in fulfilment of the requirements \\
 %	Chapters
 %---------------------
 \input{chapters/1-introduction}
+%\input{chapters/1.5-theoretical-framework}
 \input{chapters/2-LHC-ATLAS}
 \input{chapters/3-track-reconstruction}
 \input{chapters/4-ml-based-predictor}
