Introducing the backbones of the theoretical framework

--- a/bibliography/LHC-ATLAS.bib
+++ b/bibliography/LHC-ATLAS.bib
@@ -488,6 +488,30 @@ url = {https://www.sciencedirect.com/journal/nuclear-instruments-and-methods-in-
 url={https://exatrkx.github.io/},  
 author={Calafiura, Paolo}} 
 
+% financial mathematics - stochastic differential eqs
+@misc{financial-maths-sde,
+      title={Introduction to Stochastic Differential Equations (SDEs) for Finance}, 
+      author={Andrew Papanicolaou},
+      year={2019},
+      eprint={1504.05309},
+      archivePrefix={arXiv},
+      primaryClass={q-fin.MF}
+}
+
+
+% p-n junction
+@ARTICLE{6773080,
+  author={Shockley, W.},
+  journal={The Bell System Technical Journal}, 
+  title={The theory of p-n junctions in semiconductors and p-n junction transistors}, 
+  year={1949},
+  volume={28},
+  number={3},
+  pages={435-489},
+  keywords={},
+  doi={10.1002/j.1538-7305.1949.tb03645.x}}
+
+
 
 @misc{ExaTrkX-website,
   author       = {Calafiura, Paolo},
