--- a/prelim/acknowledgements.tex
+++ b/prelim/acknowledgements.tex
@@ -1,1 +1,5 @@
-Firstly I give thanks to my supervisors, Dr. Dmitry Emeliyanov and Prof. Nikos Konstantinidis for all their guidance and support they have offered over the course of this doctorate. Dmitry and Nikos have always been consistent with clear explanations and sound advice throughout the last four years. If not for the constant assistance from you both, I would not have achieved this. I express my gratitude to everyone I have worked with at the ATLAS experiment at CERN, as well as everyone within the High Energy Physics and Data Intensive Science research groups at UCL. Finally, I am indebted to my friends and family, especially to my parents for their continued support and patience through this period of my life.
+Firstly I give thanks to my supervisors, Dr. Dmitry Emeliyanov and Prof. Nikos Konstantinidis for all their guidance and support they have offered over the course of this doctorate. Dmitry and Nikos have always been consistent with clear explanations and sound advice throughout the last four years. I also thank them for their direction on the analysis and in general for helping me to narrow down on the essence of various problems. If not for the constant encouragement from you both, I would not have achieved this. 
+
+I express my gratitude to everyone I have worked with at the ATLAS experiment at CERN. During my stays at CERN, I have experienced a very welcoming and inspiring atmosphere of international collaboration. This has been a unique opportunity to gain from the knowledge of the numerous experts that are available, seemingly for any question.
+
+I would also like to thank my colleagues within the High Energy Physics and Data Intensive Science research groups at UCL. Finally, I am indebted to my friends and family, especially to my parents for their continued support, understanding and patience through this period of my life.
