In the process of expanding motivation for HL-LHC - chapter 2

--- a/bibliography/LHC-ATLAS.bib
+++ b/bibliography/LHC-ATLAS.bib
@@ -14,6 +14,188 @@
     year = "2001"
 }
 
+% trigger
+@article{collaboration_2020,
+   title={Operation of the ATLAS trigger system in Run 2},
+   volume={15},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/15/10/P10004},
+   DOI={10.1088/1748-0221/15/10/p10004},
+   number={10},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={collaboration, The ATLAS},
+   year={2020},
+   month=oct, pages={P10004–P10004} }
+
+
+% particles and nuclei
+@book{Povh:1995mua,
+    author = "Povh, B. and Rith, K. and Scholz, C. and Zersche, F. and Rodejohann, Werner",
+    title = "{Particles and nuclei: An Introduction to the physical concepts}",
+    doi = "10.1007/3-540-36684-9",
+    isbn = "978-3-662-46320-8, 978-3-662-46321-5",
+    publisher = "Springer",
+    series = "Graduate Texts in Physics",
+    year = "1995"
+}
+
+% neutrino mixing
+@article{Bilenky_1999,
+   title={Phenomenology of neutrino oscillations},
+   volume={43},
+   ISSN={0146-6410},
+   url={http://dx.doi.org/10.1016/S0146-6410(99)00092-7},
+   DOI={10.1016/s0146-6410(99)00092-7},
+   journal={Progress in Particle and Nuclear Physics},
+   publisher={Elsevier BV},
+   author={Bilenky, S.M. and Giunti, C. and Grimus, W.},
+   year={1999},
+   month=jan, pages={1–86} }
+
+
+% SM summary - mathematical formalism
+@misc{SM-bkg,
+      title={The Standard Model of Particle Physics}, 
+      author={Guido ALTARELLI},
+      year={2005},
+      eprint={hep-ph/0510281},
+      doi = {https://doi.org/10.48550/arXiv.hep-ph/0510281},
+      url = {https://arxiv.org/pdf/hep-ph/0510281.pdf}
+}
+
+% leptons
+@article{PhysRevLett.19.1264,
+  title = {A Model of Leptons},
+  author = {Weinberg, Steven},
+  journal = {Phys. Rev. Lett.},
+  volume = {19},
+  issue = {21},
+  pages = {1264--1266},
+  numpages = {0},
+  year = {1967},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.19.1264},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.19.1264}
+}
+
+
+@article{GLASHOW1961579,
+title = {Partial-symmetries of weak interactions},
+journal = {Nuclear Physics},
+volume = {22},
+number = {4},
+pages = {579-588},
+year = {1961},
+issn = {0029-5582},
+doi = {https://doi.org/10.1016/0029-5582(61)90469-2},
+url = {https://www.sciencedirect.com/science/article/pii/0029558261904692},
+author = {Sheldon L. Glashow},
+abstract = {Weak and electromagnetic interactions of the leptons are examined under the hypothesis that the weak interactions are mediated by vector bosons. With only an isotopic triplet of leptons coupled to a triplet of vector bosons (two charged decay-intermediaries and the photon) the theory possesses no partial-symmetries. Such symmetries may be established if additional vector bosons or additional leptons are introduced. Since the latter possibility yields a theory disagreeing with experiment, the simplest partially-symmetric model reproducing the observed electromagnetic and weak interactions of leptons requires the existence of at least four vector-boson fields (including the photon). Corresponding partially-conserved quantities suggest leptonic analogues to the conserved quantities associated with strong interactions: strangeness and isobaric spin.}
+}
+
+% Gauge Theories of the Strong, Weak, and Electromagnetic Interactions
+@book{gauge-theories,
+ ISBN = {0691135487},
+ URL = {http://www.jstor.org/stable/j.ctt3fgx94},
+ abstract = {This completely revised and updated graduate-level textbook is
+an ideal introduction to gauge theories and their applications to
+high-energy particle physics, and takes an in-depth look at two new
+laws of nature--quantum chromodynamics and the electroweak theory.
+From quantum electrodynamics through unified theories of the
+interactions among leptons and quarks, Chris Quigg examines the
+logic and structure behind gauge theories and the experimental
+underpinnings of today's theories. Quigg emphasizes how we know
+what we know, and in the era of the Large Hadron Collider, his
+insightful survey of the standard model and the next great
+questions for particle physics makes for compelling reading.The brand-new edition shows how the electroweak theory developed
+in conversation with experiment. Featuring a wide-ranging treatment
+of electroweak symmetry breaking, the physics of the Higgs boson,
+and the importance of the 1-TeV scale, the book moves beyond
+established knowledge and investigates the path toward unified
+theories of strong, weak, and electromagnetic interactions.
+Explicit calculations and diverse exercises allow readers to derive
+the consequences of these theories. Extensive annotated
+bibliographies accompany each chapter, amplify points of conceptual
+or technical interest, introduce further applications, and lead
+readers to the research literature. Students and seasoned
+practitioners will profit from the text's current insights, and
+specialists wishing to understand gauge theories will find the book
+an ideal reference for self-study.
+Brand-new edition of a landmark text introducing gauge
+theories
+
+Consistent attention to how we know what we know
+
+Explicit calculations develop concepts and engage with
+experiment
+
+Interesting and diverse problems sharpen skills and ideas
+
+Extensive annotated bibliographies
+},
+ author = {Chris Quigg},
+ edition = {STU - Student edition},
+ publisher = {Princeton University Press},
+ title = {Gauge Theories of the Strong, Weak, and Electromagnetic Interactions: Second Edition},
+ urldate = {2024-03-05},
+ year = {2013}
+}
+
+
+% spontaneous symmetry breaking
+@article{doi:10.1098/rsta.2014.0033,
+author = {Kibble, T. W. B. },
+title = {Spontaneous symmetry breaking in gauge theories},
+journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+volume = {373},
+number = {2032},
+pages = {20140033},
+year = {2015},
+doi = {10.1098/rsta.2014.0033},
+
+URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2014.0033},
+eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2014.0033}
+,
+    abstract = { The aim of this historical article is to describe the development of the idea of spontaneous symmetry breaking in gauge theories as seen from my perspective as a member of Abdus Salam's group at Imperial College London, UK. Beginning with an account of particle physics in the years after the Second World War, I describe early attempts at constructing a unified theory of weak and electromagnetic interactions, the obstacles encountered and how they were eventually overcome with the mass-generating mechanism incorporating the idea of spontaneous symmetry breaking, one of whose features is the now-famous Higgs boson. }
+}
+
+
+
+% gauge symmetries
+@book{bailin1993introduction,
+  title={Introduction to Gauge Field Theory Revised Edition},
+  author={Bailin, D. and Love, A.},
+  isbn={9780750302814},
+  lccn={lc92038471},
+  series={Graduate Student Series in Physics},
+  url={https://books.google.co.uk/books?id=A9MU9pvcEGQC},
+  year={1993},
+  publisher={Taylor \& Francis}
+}
+
+
+% higgs production and decay channels
+@article{ATLAS:2022vkf,
+    author = "Aad, Georges and others",
+    collaboration = "ATLAS",
+    title = "{A detailed map of Higgs boson interactions by the ATLAS experiment ten years after the discovery}",
+    eprint = "2207.00092",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-EP-2022-057",
+    doi = "10.1038/s41586-022-04893-w",
+    journal = "Nature",
+    volume = "607",
+    number = "7917",
+    pages = "52--59",
+    year = "2022",
+    note = "[Erratum: Nature 612, E24 (2022)]"
+}
+
+
+
 
 % LHC
 @Article{Evans:2008zzb,
@@ -250,8 +432,7 @@
 
 @techreport{Penc:2104217,
       author        = "Penc, Ondrej and ATLAS Collaboration",
-      title         = "{The design and performance of the ATLAS Inner Detector
-                       trigger for Run 2}",
+      title         = "{The design and performance of the ATLAS Inner Detector trigger for Run 2}",
       institution   = "CERN",
       reportNumber  = "ATL-DAQ-PROC-2015-058",
       address       = "Geneva",
@@ -497,6 +678,140 @@ author={Calafiura, Paolo}}
       archivePrefix={arXiv},
       primaryClass={q-fin.MF}
 }
+
+@misc{david_galbraith_ux_2012,
+	title        = {{UX}: {Standard} {Model} of the {Standard} {Model}},
+	author       = {{Galbraith, David} and Burgard, Carsten},
+	year         = 2012,
+	url          = {https://davidgalbraith.org/portfolio/ux-standard-model-of-the-standard-model/},
+	urldate      = {2024-02-26}
+}
+
+
+% higgs - atlas and cms
+@article{higgs-20121,
+title = {Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC},
+journal = {Physics Letters B},
+volume = {716},
+number = {1},
+pages = {1-29},
+year = {2012},
+issn = {0370-2693},
+doi = {https://doi.org/10.1016/j.physletb.2012.08.020},
+url = {https://www.sciencedirect.com/science/article/pii/S037026931200857X},
+author = {G. Aad and T. Abajyan and B. Abbott and J. Abdallah and S. {Abdel Khalek} and A.A. Abdelalim and O. Abdinov and R. Aben and B. Abi and M. Abolins and O.S. AbouZeid and H. Abramowicz and H. Abreu and B.S. Acharya and L. Adamczyk and D.L. Adams and T.N. Addy and J. Adelman and S. Adomeit and P. Adragna and T. Adye and S. Aefsky and J.A. Aguilar-Saavedra and M. Agustoni and M. Aharrouche and S.P. Ahlen and F. Ahles and A. Ahmad and M. Ahsan and G. Aielli and T. Akdogan and T.P.A. Åkesson and G. Akimoto and A.V. Akimov and M.S. Alam and M.A. Alam and J. Albert and S. Albrand and M. Aleksa and I.N. Aleksandrov and F. Alessandria and C. Alexa and G. Alexander and G. Alexandre and T. Alexopoulos and M. Alhroob and M. Aliev and G. Alimonti and J. Alison and B.M.M. Allbrooke and P.P. Allport and S.E. Allwood-Spiers and J. Almond and A. Aloisio and R. Alon and A. Alonso and F. Alonso and A. Altheimer and B. {Alvarez Gonzalez} and M.G. Alviggi and K. Amako and C. Amelung and V.V. Ammosov and S.P. {Amor Dos Santos} and A. Amorim and N. Amram and C. Anastopoulos and L.S. Ancu and N. Andari and T. Andeen and C.F. Anders and G. Anders and K.J. Anderson and A. Andreazza and V. Andrei and M.-L. Andrieux and X.S. Anduaga and S. Angelidakis and P. Anger}
+}
+
+@article{higgs-201230,
+title = {Observation of a new boson at a mass of 125 GeV with the CMS experiment at the LHC},
+journal = {Physics Letters B},
+volume = {716},
+number = {1},
+pages = {30-61},
+year = {2012},
+issn = {0370-2693},
+doi = {https://doi.org/10.1016/j.physletb.2012.08.021},
+url = {https://www.sciencedirect.com/science/article/pii/S0370269312008581},
+author = {S. Chatrchyan and V. Khachatryan and A.M. Sirunyan and A. Tumasyan and W. Adam and E. Aguilo and T. Bergauer and M. Dragicevic and J. Erö and C. Fabjan and M. Friedl and R. Frühwirth and V.M. Ghete and J. Hammer and M. Hoch and N. Hörmann and J. Hrubec and M. Jeitler and W. Kiesenhofer and V. Knünz and M. Krammer and I. Krätschmer and D. Liko and W. Majerotto and I. Mikulec and M. Pernicka and B. Rahbaran and C. Rohringer and H. Rohringer and R. Schöfbeck and J. Strauss and F. Szoncsó and A. Taurok and W. Waltenberger and G. Walzel and E. Widl and C.-E. Wulz and V. Chekhovsky and I. Emeliantchik and A. Litomin and V. Makarenko and V. Mossolov and N. Shumeiko and A. Solin and R. Stefanovitch and J. {Suarez Gonzalez} and A. Fedorov and M. Korzhik and O. Missevitch and R. Zuyeuski and M. Bansal and S. Bansal and W. Beaumont and T. Cornelis and E.A. {De Wolf} and D. Druzhkin and X. Janssen and S. Luyckx and L. Mucibello and S. Ochesanu and B. Roland and R. Rougny and M. Selvaggi and Z. Staykova and H. {Van Haevermaet} and P. {Van Mechelen} and N. {Van Remortel} and A. {Van Spilbeeck} and F. Blekman and S. Blyweert and J. DʼHondt and O. Devroede and R. {Gonzalez Suarez} and R. Goorens and A. Kalogeropoulos and M. Maes and A. Olbrechts and S. Tavernier and W. {Van Doninck} and L. {Van Lancker} and P. {Van Mulders} and G.P. {Van Onsem} and I. Villella and B. Clerbaux and G. {De Lentdecker} and V. Dero and J.P. Dewulf and A.P.R. Gay and T. Hreus and A. Léonard and P.E. Marage and A. Mohammadi and T. Reis and S. Rugovac and L. Thomas and C. {Vander Velde} and P. Vanlaer and J. Wang and J. Wickens and V. Adler and K. Beernaert and A. Cimmino and S. Costantini and G. Garcia and M. Grunewald and B. Klein and J. Lellouch and A. Marinov and J. Mccartin and A.A. {Ocampo Rios} and D. Ryckbosch and N. Strobbe and F. Thyssen and M. Tytgat and S. Walsh and E. Yazgan and N. Zaganidis and S. Basegmez and G. Bruno and R. Castello and L. Ceard and J. {De Favereau De Jeneret} and C. Delaere and P. Demin and T. {du Pree} and D. Favart and L. Forthomme and A. Giammanco and G. Grégoire and J. Hollar and V. Lemaitre and J. Liao and O. Militaru and C. Nuttens and D. Pagano and A. Pin and K. Piotrzkowski and N. Schul and J.M. {Vizan Garcia} and N. Beliy and T. Caebergs and E. Daubie and G.H. Hammad and G.A. Alves and L. Brito and M. {Correa Martin} and T. Martins and M.E. Pol and M.H.G. Souza and W.L. {Aldá Júnior} and W. Carvalho and A. Custódio and E.M. {Da Costa} and D. {De Jesus Damiao} and C. {De Oliveira Martins} and S. {Fonseca De Souza} and D. {Matos Figueiredo} and L. Mundim and H. Nogima and V. Oguri and W.L. {Prado Da Silva} and A. Santoro and A. Sznajder and A. {Vilela Pereira} and T.S. Anjos and C.A. Bernardes and F.A. Dias and T.R. {Fernandez Perez Tomei} and E.M. Gregores },
+keywords = {CMS, Physics, Higgs}
+}
+
+
+
+
+
+% Higgs
+@article{PhysRevLett.13.321,
+  title = {Broken Symmetry and the Mass of Gauge Vector Mesons},
+  author = {Englert, F. and Brout, R.},
+  journal = {Phys. Rev. Lett.},
+  volume = {13},
+  issue = {9},
+  pages = {321--323},
+  numpages = {0},
+  year = {1964},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.13.321},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.321}
+}
+
+@article{PhysRevLett.13.508,
+  title = {Broken Symmetries and the Masses of Gauge Bosons},
+  author = {Higgs, Peter W.},
+  journal = {Phys. Rev. Lett.},
+  volume = {13},
+  issue = {16},
+  pages = {508--509},
+  numpages = {0},
+  year = {1964},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.13.508},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.508}
+}
+
+@article{PhysRevLett.13.585,
+  title = {Global Conservation Laws and Massless Particles},
+  author = {Guralnik, G. S. and Hagen, C. R. and Kibble, T. W. B.},
+  journal = {Phys. Rev. Lett.},
+  volume = {13},
+  issue = {20},
+  pages = {585--587},
+  numpages = {0},
+  year = {1964},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.13.585},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.585}
+}
+
+
+
+
+
+
+
+@ARTICLE{Morel2020-kf,
+  title     = "Determination of the fine-structure constant with an accuracy of
+               81 parts per trillion",
+  author    = "Morel, L{\'e}o and Yao, Zhibin and Clad{\'e}, Pierre and
+               Guellati-Kh{\'e}lifa, Sa{\"\i}da",
+  abstract  = "The standard model of particle physics is remarkably successful
+               because it is consistent with (almost) all experimental results.
+               However, it fails to explain dark matter, dark energy and the
+               imbalance between matter and antimatter in the Universe. Because
+               discrepancies between standard-model predictions and
+               experimental observations may provide evidence of new physics,
+               an accurate evaluation of these predictions requires highly
+               precise values of the fundamental physical constants. Among
+               them, the fine-structure constant $\alpha$ is of particular
+               importance because it sets the strength of the electromagnetic
+               interaction between light and charged elementary particles, such
+               as the electron and the muon. Here we use matter-wave
+               interferometry to measure the recoil velocity of a rubidium atom
+               that absorbs a photon, and determine the fine-structure constant
+               $\alpha$-1 = 137.035999206(11) with a relative accuracy of 81
+               parts per trillion. The accuracy of eleven digits in $\alpha$
+               leads to an electron g factor1,2-the most precise prediction of
+               the standard model-that has a greatly reduced uncertainty. Our
+               value of the fine-structure constant differs by more than 5
+               standard deviations from the best available result from caesium
+               recoil measurements3. Our result modifies the constraints on
+               possible candidate dark-matter particles proposed to explain the
+               anomalous decays of excited states of 8Be nuclei4 and paves the
+               way for testing the discrepancy observed in the magnetic moment
+               anomaly of the muon5 in the electron sector6.",
+  journal   = "Nature",
+  publisher = "Springer Science and Business Media LLC",
+  volume    =  588,
+  number    =  7836,
+  pages     = "61--65",
+  month     =  dec,
+  year      =  2020,
+  language  = "en"
+}
+
 
 
 % p-n junction
