--- a/prelim/acronyms.tex
+++ b/prelim/acronyms.tex
@@ -39,9 +39,11 @@
  \acro{PS}{Proton Synchrotron}
  \acro{PSB}{Proton Synchrotron Booster}
  \acro{QCD}{Quantum Chromodynamic}
+ \acro{QFT}{Quantum Field Theory}
  \acro{ROC}{Receiver Operating Characteristic}
  \acro{RNN}{Recurrent Neural Network}
  \acro{SCT}{Semiconductor Tracker}
+ \acro{SSB}{Spontaneous Symmetry Breaking}
  \acro{SM}{Standard Model}
  \acro{SPS}{Super Proton Synchrotron}
  \acro{SVM}{Support Vector Machine}
