Completed chapter 2 corrections

--- a/bibliography/LHC-ATLAS.bib
+++ b/bibliography/LHC-ATLAS.bib
@@ -195,6 +195,21 @@ eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2014.0033}
 }
 
 
+% dihiggs, H->4b
+@techreport{ATLAS-CONF-2022-035,
+      collaboration = "ATLAS",
+      title         = "{Search for non-resonant pair production of Higgs bosons
+                       in the $b\bar{b}b\bar{b}$ final state in $pp$ collisions at
+                       $\sqrt{s}= 13$ TeV with the ATLAS detector}",
+      institution   = "CERN",
+      reportNumber  = "ATLAS-CONF-2022-035",
+      address       = "Geneva",
+      year          = "2022",
+      url           = "https://cds.cern.ch/record/2811390",
+      note          = "All figures including auxiliary figures are available at
+                       https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2022-035",
+}
+
 
 
 % LHC
