chp 3 corrections complete

--- a/bibliography/LHC-ATLAS.bib
+++ b/bibliography/LHC-ATLAS.bib
@@ -136,7 +136,7 @@ Interesting and diverse problems sharpen skills and ideas
 Extensive annotated bibliographies
 },
  author = {Chris Quigg},
- edition = {STU - Student edition},
+ edition = "{STU - Student edition}",
  publisher = {Princeton University Press},
  title = {Gauge Theories of the Strong, Weak, and Electromagnetic Interactions: Second Edition},
  urldate = {2024-03-05},
@@ -209,6 +209,24 @@ eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2014.0033}
       note          = "All figures including auxiliary figures are available at
                        https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2022-035",
 }
+
+
+% global chi-2 fitter
+@article{TGCornelissen2008,
+doi = {10.1088/1742-6596/119/3/032013},
+url = {https://dx.doi.org/10.1088/1742-6596/119/3/032013},
+year = {2008},
+month = {jul},
+publisher = {},
+volume = {119},
+number = {3},
+pages = {032013},
+author = {T G Cornelissen and  M Elsing and  I Gavrilenko and  J-F Laporte and  W Liebig and  M Limper and  K Nikolopoulos and  A Poppleton and  A Salzburger},
+title = {The global $\chi^{2}$ track fitter in ATLAS},
+journal = {Journal of Physics: Conference Series},
+abstract = {While many high energy experiments use track fitting software that is based solely on the Kalman Filter technique, the ATLAS offline reconstruction also has several global track fitters available. One of these is the GlobalChi2Fitter, which is based on the scattering angle formulation of the track fit. One of the advantages of this method over the Kalman fit is that it can provide the scattering angles and related quantities (e.g. the residual derivatives) to the alignment algorithms. The algorithm has been implemented in the new common tracking framework in ATLAS, the philosophy of which is to improve the modularity and flexibility of the tracking software. This flexibility has proven crucial for the understanding of the data from the testbeam and cosmic runs. An overview of recent results will be presented, in particular the results from the combined tracking with the inner detector and the muon spectrometer using the cosmics data.}
+}
+
 
 
 
